classDiagram
%% Generated by Modeler - do not change.

class Employee {
    FirstName: Text
    Gender: Gender
    LastName: Text
    ResidentialAddress: Address
}

class Manager {
    ManagesFromDate: Date
}

class Organization_Unit {
    Address: Address
    Name: Text
}

class Gender {
<<enumeration>>
    Female
    Male
}

class Address {
    ApartmentNumber: Text
    City: Text
    Country: Text
    HouseNumber: Text
    Street: Text
}

Employee "0..*" --> "1" Organization_Unit : works_in / hires 
Manager --|> Employee 
Manager "1" --> "1" Organization_Unit : manages / is_managed_by 
